crates/test-files/fixtures/compile_errors/emittable_not_implementable.fe
use std::context::{Emittable, OutOfReachMarker}

struct Custom {}

impl Emittable for Custom {
  fn emit(self, _ val: OutOfReachMarker) {

  }
}